# SafeGuard-AI

./: README.md  config.yaml  landing_page.html  main.py  pyproject.toml
core/camera/: controller.py  driver.py
core/database/: postgresql.py  redis.py
core/identify/: gemini_identifier.py  yolo_identifier.py
core/notify/: line_notifier.py  ntfy_notifier.py
models/: analyzer.py  database.py  detector.py  notifier.py  video.py
