[project]
name = "SafeGuard"
version = "0.1.0"
description = "這是參加 AI For A Better Future 競賽的專案，旨在開發一個安全防護系統，利用人工智慧技術來預測和防止潛在的安全威脅。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.72.0",
    "opencv-python>=4.13.0.92",
    "requests>=2.33.1",
    "ultralytics>=8.4.37",
]
